visual zoom fixed on mobile and design system in synthetify

--- a/src/components/Visual/visual.css
+++ b/src/components/Visual/visual.css
@@ -39,6 +39,7 @@
 }
 
 .fullmode img, .fullmode-light img {
+  max-width: 80%;
   max-height: 80%;
 }
 
